# ninoverse

./: .env  Cargo.toml  EXPERIMENTS.md  README  build.sh  docker-compose.yaml
sql/: 01_init_projects_table.sql  02_init_status_types_dictionary.sql
src/: configuration.rs  db.rs  http_handler.rs  kafka_handler.rs  logger.rs  main.rs  migration.rs
src/api/: configuration.rs  mod.rs
src/api_handler/: configuration.rs  error.rs  mod.rs  struct.rs  structs.rs
src/db_handler/: mod.rs
src/http_handler/: error.rs  mod.rs
src/kafka_handler/: mod.rs  structs.rs
